# AgenticRAG

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  chat_history.db  docker-compose.yml  main.py  pyproject.toml
data/: embeddings.npy  faiss.index  metadata.json  patients.json  suspected-cancer-recognition-and-referral_elements.json
src/agent/: PROMPTS.md  agent.py
src/api/: main.py  routes.py  schemas.py
src/database/: db_manager.py
src/embeddings/: embeddings.py  faiss.py
src/evaluation/: evaluate.py
src/preprocess/: chunking.py  enhancing_data.py  parsed_data.py
src/tools/: patient_data.py  rag_search.py
src/ui/: streamlit_app.py  style.css
